# expense-board

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: post-commit  pre-commit
authentication/: tests.py  urls.py  views.py
expenseboard/: asgi.py  settings.py  urls.py  wsgi.py
expenseboard/settings/: __init__.py  dev.py  prod.py  test.py
expenses/: admin.py  models.py  utils.py
expenses/graphql/: object_types.py  schema.py  views.py
expenses/management/commands/: seed_data.py
expenses/migrations/: 0001_initial.py
expenses/tests/: test_graphql.py  test_utils.py
frontend/: .eslintcache  package-lock.json  package.json
scripts/: entrypoint.sh
