[tool.poetry]
name = "expense-board"
version = "0.1.0"
description = "A dashboard to track your personal expenses"
authors = ["Chiron1991"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-money = "^1.1"
django-extensions = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
