[tool.poetry]
name = "expense-board"
version = "0.1.0"
description = "A dashboard to track your personal expenses"
authors = ["Chiron1991"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-money = "^1.1"
django-extensions = "^3.0.9"
graphene-django = "^2.13.0"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.1.1"
flake8-django = "^1.1.1"
isort = "^5.6.4"

[tool.isort]
line_length = 120
skip_glob = "*/migrations/*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
